refactor(slot) : refactor slot get service